--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -18,9 +18,19 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+        
+#  release:
+#    types: published
+#  push:
+#    branches:
+#      - master
+#    paths:
+#      - 'x86.config'
   schedule:
-    - cron: 0 18 * * *
-    
+    - cron: 0 17 * * *
+#  watch:
+#    types: started
+
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
