--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -28,8 +28,8 @@ on:
 #      - 'x86.config'
   schedule:
     - cron: 0 17 * * *
-#  watch:
-#    types: started
+  watch:
+    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
