--- a/x86-64.config
+++ b/x86-64.config
@@ -163,3 +163,6 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=640
 CONFIG_TROJAN_GO_COMPRESS_UPX=y
 CONFIG_V2RAY_CORE_COMPRESS_UPX=y
 # CONFIG_VMDK_IMAGES is not set
+CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
