--- a/x86-64.config
+++ b/x86-64.config
@@ -31,7 +31,7 @@ CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
 CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 CONFIG_PACKAGE_ddns-scripts_nsupdate=y
 CONFIG_PACKAGE_ddns-scripts_route53-v1=y
-CONFIG_PACKAGE_filebrowser=y
+# CONFIG_PACKAGE_filebrowser=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_frps=y
 # CONFIG_PACKAGE_grub2-efi is not set
@@ -62,21 +62,25 @@ CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libcap-bin=y
 CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
+CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libltdl=y
 CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmaxminddb=y
 CONFIG_PACKAGE_libnghttp2=y
-CONFIG_PACKAGE_librrd1=y
 CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_lua-cjson=y
+CONFIG_PACKAGE_lua-maxminddb=y
+CONFIG_PACKAGE_luasocket=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-fileassistant=y
-CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
+CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-passwall=y
@@ -94,8 +98,8 @@ CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frps-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-pptp-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
