--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -83,9 +83,9 @@ jobs:
     - name: 去除重复应用包
       run: |
         cd openwrt
-        sudo rm -rf ./feeds/packages/net/mosdns && cp -rf ./feeds/kenzo/mosdns ./feeds/packages/net/mosdns
-        sed -i 's/mosdns_neo/mosdns/g' ./feeds/kenzo/luci-app-mosdns/Makefile
-        sed -i 's/mosdns_neo/mosdns/g' ./feeds/kenzo/mosdns/Makefile
+        sudo rm -rf ./feeds/packages/net/mosdns && cp -rf ./feeds/kenzok/mosdns ./feeds/packages/net/mosdns
+        sed -i 's/mosdns_neo/mosdns/g' ./feeds/kenzok/luci-app-mosdns/Makefile
+        sed -i 's/mosdns_neo/mosdns/g' ./feeds/kenzok/mosdns/Makefile
         sed -i 's/mosdns_neo/mosdns/g' ./feeds/packages/net/mosdns/Makefile
   
     - name: Update feeds
