--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -83,10 +83,10 @@ jobs:
     - name: 去除重复应用包
       run: |
         cd openwrt
-        sudo rm -rf ./openwrt/feeds/packages/net/mosdns && cp -rf ./openwrt/feeds/kenzok/mosdns ./openwrt/feeds/packages/net/mosdns
-        sed -i 's/mosdns_neo/mosdns/g' ./openwrt/feeds/kenzok/luci-app-mosdns/Makefile
-        sed -i 's/mosdns_neo/mosdns/g' ./openwrt/feeds/kenzok/mosdns/Makefile
-        sed -i 's/mosdns_neo/mosdns/g' ./openwrt/feeds/packages/net/mosdns/Makefile
+        rm -rf ./feeds/packages/net/mosdns && cp -rf ./feeds/kenzok/mosdns ./feeds/packages/net/mosdns
+        sed -i 's/mosdns_neo/mosdns/g' ./feeds/kenzok/luci-app-mosdns/Makefile
+        sed -i 's/mosdns_neo/mosdns/g' ./feeds/kenzok/mosdns/Makefile
+        sed -i 's/mosdns_neo/mosdns/g' ./feeds/packages/net/mosdns/Makefile
   
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
