--- a/.github/workflows/ea8500.yml
+++ b/.github/workflows/ea8500.yml
@@ -25,11 +25,11 @@ on:
 #    branches:
 #      - master
 #    paths:
-#      - 'x86.config'
-  schedule:
-    - cron: 0 17 * * *
-  watch:
-    types: started
+#      - 'ea8500.config'
+#  schedule:
+#    - cron: 0 17 * * *
+#  watch:
+#    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
