--- a/x86-64+.config
+++ b/x86-64+.config
@@ -143,3 +143,12 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
+
+CONFIG_PACKAGE_fail2ban=y
+CONFIG_PACKAGE_python3=y
+CONFIG_PACKAGE_python3-pip=y
+CONFIG_PACKAGE_python3-setuptools=y
+CONFIG_PACKAGE_python3-netifaces=y
+CONFIG_PACKAGE_python3-glob2=y
+CONFIG_PACKAGE_python3-cryptography=y
+CONFIG_PACKAGE_python3-openssl=y
