--- a/x86-64+.config
+++ b/x86-64+.config
@@ -8,6 +8,7 @@ CONFIG_CGROUPFS_MOUNT_KERNEL_CGROUPS=y
 # CONFIG_DOCKER_OPTIONAL_FEATURES=y
 # CONFIG_DOCKER_STO_EXT4=y
 # CONFIG_GRUB_EFI_IMAGES is not set
+CONFIG_NF_CONNTRACK_RTSP=y
 CONFIG_GRUB_IMAGES=y
 CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
