--- a/.github/workflows/istoreOS.yml
+++ b/.github/workflows/istoreOS.yml
@@ -67,10 +67,11 @@ jobs:
         sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /etc/mysql /etc/php /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
         sudo -E apt-get -qq install $(cat $GITHUB_WORKSPACE/depends/${{ matrix.os }})
-        wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
-        sudo python2.7 get-pip.py
-        sudo rm -rf get-pip.py
-        sudo pip install pyelftools
+        sudo -E apt-get -qq install binutils bzip2 diff find flex gawk gcc-6+ getopt grep install libc-dev libz-dev make4.1+ perl python3.6+ rsync subversion unzip which
+      #  wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
+      #  sudo python2.7 get-pip.py
+      #  sudo rm -rf get-pip.py
+      #  sudo pip install pyelftools
         echo "------------------------------- 清理Docker镜像和软件 -------------------------------"
         docker rmi `docker images -q`
         docker image prune -a -f
