--- a/x86-64+.config
+++ b/x86-64+.config
@@ -264,3 +264,9 @@ CONFIG_boost-variant-release=y
 #CONFIG_DEFAULT_kmod-r8125=y
 #CONFIG_FEED_rtl8125=y
 #CONFIG_PACKAGE_kmod-r8125=y
+
+CONFIG_DEFAULT_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+# CONFIG_ZEROTIER_ENABLE_DEBUG is not set
+# CONFIG_ZEROTIER_ENABLE_SELFTEST is not set
