--- a/x86-64+.config
+++ b/x86-64+.config
@@ -280,5 +280,5 @@ CONFIG_DEFAULT_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 
-CONFIG_PACKAGE_luci-app-netspeedtest=y
-CONFIG_PACKAGE_luci-i18n-netspeedtest-zh-cn=y
+#CONFIG_PACKAGE_luci-app-netspeedtest=y
+#CONFIG_PACKAGE_luci-i18n-netspeedtest-zh-cn=y
