--- a/.github/workflows/X86-64.yml
+++ b/.github/workflows/X86-64.yml
@@ -84,6 +84,7 @@ jobs:
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
            rm -rf feeds/luci/applications/luci-app-mosdns
+           rm -rf feeds/luci/applications/luci-app-serverchan
            rm -rf feeds/packages/net/{alist,adguardhome,smartdns}
            rm -rf feeds/packages/lang/golang
            git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
