--- a/x86-64+.config
+++ b/x86-64+.config
@@ -318,8 +318,8 @@ CONFIG_boost-variant-release=y
 # CONFIG_PACKAGE_luci-i18n-bypass-zh-cn=y
 
 # homeproxy
-#CONFIG_PACKAGE_luci-app-homeproxy=y
-#CONFIG_PACKAGE_luci-i18n-homeproxy-zh_Hans is not set
+CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-i18n-homeproxy-zh_Hans is not set
 
 # smartdns
 # CONFIG_PACKAGE_luci-app-smartdns=y
