--- a/x86-64+.config
+++ b/x86-64+.config
@@ -319,7 +319,7 @@ CONFIG_boost-variant-release=y
 
 # homeproxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
-CONFIG_PACKAGE_luci-i18n-homeproxy-zh_Hans is not set
+CONFIG_PACKAGE_luci-i18n-homeproxy-zh=y
 
 # smartdns
 # CONFIG_PACKAGE_luci-app-smartdns=y
