--- a/.github/workflows/x86-64-op.yml
+++ b/.github/workflows/x86-64-op.yml
@@ -25,7 +25,6 @@ env:
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: x86-64+.config
   DIY_P1_SH: diy-part1.sh
- # DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_RELEASE: true
@@ -77,9 +76,7 @@ jobs:
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_P2_SH
-        cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P2_SH
+        echo "Custom configuration loaded from $CONFIG_FILE"
 
     - name: Download package
       id: package
@@ -134,7 +131,6 @@ jobs:
       run: |
         echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
         touch release.txt
-        [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Upload firmware to release
