--- a/x86-64+.config
+++ b/x86-64+.config
@@ -299,9 +299,13 @@ CONFIG_boost-variant-release=y
 # CONFIG_SING_BOX_WITH_GVISOR is not set
 
 # Firewall Configurations
-# CONFIG_PACKAGE_iptables-mod-fullconenat=y
-$ CONFIG_PACKAGE_firewall=y
-# CONFIG_PACKAGE_firewall4 is not set
+CONFIG_DEFAULT_firewall=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
+CONFIG_PACKAGE_iptables-mod-fullconenat=y
+CONFIG_PACKAGE_kmod-ipt-fullconenat=y
+CONFIG_PACKAGE_firewall=y
+CONFIG_PACKAGE_firewall4=y
 
 # socat
 CONFIG_PACKAGE_socat=y
