--- a/x86-64+.config
+++ b/x86-64+.config
@@ -368,3 +368,4 @@ CONFIG_boost-variant-release=y
 CONFIG_shadow-all=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_kmod-ipt-fullconenat=y
+CONFIG_PACKAGE_luci-app-wireguard=y
