--- a/x86-64+.config
+++ b/x86-64+.config
@@ -375,7 +375,7 @@ CONFIG_shadow-all=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 # CONFIG_PACKAGE_kmod-crypto-kpp is not set
 CONFIG_PACKAGE_kmod-ipt-fullconenat=y
-# CONFIG_PACKAGE_luci-proto-wireguard=y
-# CONFIG_PACKAGE_kmod-wireguard=y
-# CONFIG_PACKAGE_wireguard-tools=y
-# CONFIG_SING_BOX_WITH_WIREGUARD=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_SING_BOX_WITH_WIREGUARD=y
